fix: Add header wrapping for blogtitle on front page

--- a/src/css/critical.css
+++ b/src/css/critical.css
@@ -200,6 +200,7 @@ header::after {
 body header h1 {
   font-size: var(--xxl);
   max-width: 50rem;
+  word-break: break-word;
 }
 
 body header a {
